# tito-integration-hackaway

./: .gitignore  CMakeLists.txt  README.md  hackaway_logo_ascii.txt  mem_test.py  resources.qrc
.github/workflows/: main.yml  test.yml
assets/: default.html  hacker.html  mentor.html  staff.html
scripts/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  tito-integration-hackaway.sln  tito-integration-hackaway.vcxproj  tito-integration-hackaway.vcxproj.filters
src/: .gitignore  .select_attendee.cpp.kate-swp  CImg.h  confirm_select.cpp  confirm_select.h  error_screen.cpp  error_screen.h  id_card_gen.cpp  id_card_gen.h  json.hpp  main.cpp  ncurses_colours.cpp  ncurses_colours.h  ncurses_utils.cpp  ncurses_utils.h  qrcodegen.cpp  qrcodegen.hpp  select_attendee.cpp  select_attendee.h  tito.cpp  tito.h  tito_classes.cpp  tito_classes.h  tito_classes.hpp  view_attendee.cpp  view_attendee.h
tests/: runner.cpp  testIdCardGen.cpp  testIdCardGen.h  testNcursesUtils.cpp  testNcursesUtils.h  testTito.cpp  testTito.h
